# social-robot-embodied-behaviour-architecture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chatBot.py  executiveControl.py  faceSelector.py  interactionManager.py  mock.py  prompts.json  requirements.txt  salienceNetwork.py  telegram_bot.py  vision.py
app/: CMakeLists.txt
app/alwaysOn-embodiedBehaviour/: CMakeLists.txt
app/alwaysOn-embodiedBehaviour/scripts/: alwaysOn-embodiedBehaviour.xml
modules/: CMakeLists.txt  chatBot.py  executiveControl.py  llm.env.template  prompts.json  salienceNetwork.py  vision.py
modules/utils/: generateQr.py  mockPublisher.py
